Fix word wrap

--- a/src/Calendar/Calendar.scss
+++ b/src/Calendar/Calendar.scss
@@ -48,7 +48,6 @@ $hoverBoxShadow: 0 0 0 $boxShadowWidth $F00;
     width: 17px;
     padding: 18px 0 12px;
     color: $D10;
-    word-wrap: normal;
   }
 
   &-Week {
